junit_tests(
    compiler_option_sets = ["fatal_warnings"],
    platform = "java8",
    tags = ["bazel-compatible"],
    dependencies = [
        "3rdparty/jvm/io/grpc:grpc-context",
        "3rdparty/jvm/junit",
        "3rdparty/jvm/org/scalatestplus:junit",
        "finagle/finagle-grpc-context/src/main/java/io/grpc/override",
        "util/util-core:util-core-util",
    ],
)
